# spatial-probe

./: .gitignore  README.md
data-gen/: Makefile  README.md  config.yaml  pyproject.toml
data-gen/scripts/: config.py  inspect.py  run.py
data-gen/src/: constants.py  description.py  load_dataset.py  qa.py  relations.py  render.py  sample.py
eval/: Makefile  README.md  config.yaml  pyproject.toml
eval/scripts/: inspect.py  run.py
eval/src/: aggregate.py  config.py  data.py  plot.py  score.py
inference/: Makefile  README.md  config.yaml  pyproject.toml
inference/scripts/: run.py
inference/src/: config.py  dataset.py  inference.py  records.py
