[project]
name = "inference"
version = "0.1.0"
description = "Run frozen VLMs over the spatial-QA dataset across modality combos"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "ruff>=0.15.12",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
